# acvf

./: README.md  pyproject.toml  requirements.txt
avcf/: __init__.py
avcf/app/: services.py
avcf/cli/: __init__.py  ffmpeg.py  sign.py  verify.py
avcf/domain/: crypto.py  models.py
avcf/infra/: container.py  exceptions.py  ffmpeg_wrapper.py
docs/: usage_guide.md
examples/: demo.py
schema/: avcf_auth_schema.json
tests/: __init__.py  test_container.py  test_crypto.py  test_integration.py  test_models.py  test_services.py
vlc/: avcf_verify.lua
